<resources>
    <string name="app_name">Score Calculator</string>

    <string name="action_clear">RESET</string>
    <string name="action_play">THROW</string>
    <string name="action_save">SAVE</string>
    <string name="max_possible">Max possible</string>
    <string name="total_score">Total score</string>
    <string name="current_frame">Frame</string>
    <string name="action_settings">settings</string>
    <string name="load_result">Load a result</string>
    <string name="save_result">Save result</string>
    <string name="create_result">Create result sheet</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="no_result_name">No name given!</string>
    <string name="create_bowler">Enter bowler\'s name</string>
    <string name="max_input_count_reached">Max allowed reached!</string>
    <string name="max_bowler_count_reached">Max 10 bowlers allowed</string>
    <string name="empty_state_add_bowler_title">No results to show!</string>
    <string name="empty_state_add_bowler_body">There seem to be no result to show! Create a bowler in order to see their
        results here.
    </string>
    <string name="exception_bowler_exists">The bowler created already exists</string>
    <string name="action_rename">Rename</string>
    <string name="empty_state_results_title">No results found!</string>
    <string name="empty_state_results_body">There are no save results. Your saved results will show here.</string>
    <string name="settings">Settings</string>
    <string name="settingsName">App name</string>
    <string name="settingsThemes">Choose a palette</string>
</resources>
