<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:elevation="1dp"
        android:translationZ="8dp"
        android:paddingStart="@dimen/padding_small"
        android:paddingEnd="@dimen/padding_small"
        android:orientation="horizontal"
        android:background="@color/colorPrimaryLight"
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView
                android:id="@+id/currentFrameLabel"
                android:layout_marginStart="@dimen/margin_medium"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="12sp"
                android:text="@string/current_frame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <TextView
                android:id="@+id/currentFrameValue"
                android:layout_width="50dp"
                android:layout_height="24dp"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="sans-serif-black"
                android:textStyle="bold"
                android:gravity="center"
                android:textAlignment="gravity"
                android:background="@drawable/shape_button"
                android:backgroundTint="@color/colorPrimaryVeryLight"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium"
                app:layout_constraintStart_toEndOf="@id/currentFrameLabel"
                app:layout_constraintTop_toTopOf="@id/currentFrameLabel"
                app:layout_constraintBottom_toBottomOf="@id/currentFrameLabel"/>

        <TextView
                android:id="@+id/totalScoreLabel"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="12sp"
                android:text="@string/total_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_medium"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/totalScoreValue"/>

        <TextView
                android:id="@+id/totalScoreValue"
                android:layout_width="50dp"
                android:layout_height="24dp"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="sans-serif-black"
                android:textStyle="bold"
                android:gravity="center"
                android:text="300"
                android:textAlignment="gravity"
                android:background="@drawable/shape_button"
                android:backgroundTint="@color/colorPrimaryVeryLight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.545"/>

        <TextView
                android:id="@+id/maxPossibleLabel"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="12sp"
                android:text="@string/max_possible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_medium"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/maxPossibleValue"/>

        <TextView
                android:id="@+id/maxPossibleValue"
                android:layout_width="50dp"
                android:layout_height="24dp"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="sans-serif-black"
                android:textStyle="bold"
                android:gravity="center"
                android:textAlignment="gravity"
                android:background="@drawable/shape_button"
                android:backgroundTint="@color/colorPrimaryVeryLight"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>