<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:background="@drawable/shape_dialog"
              android:backgroundTint="@color/colorPrimary"
              android:elevation="2dp"
              android:translationZ="16dp"
              android:padding="@dimen/margin_large"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <TextView
            android:id="@+id/saveDialogLabel"
            android:text="@string/save_result"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <FrameLayout
            android:id="@+id/saveDialogInputContainer"
            android:background="@drawable/shape_button"
            android:paddingStart="@dimen/padding"
            android:paddingEnd="@dimen/padding"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_large"
            app:layout_constraintTop_toBottomOf="@+id/saveDialogLabel">

        <EditText
                android:id="@+id/saveDialogInput"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </FrameLayout>
    <LinearLayout
            android:id="@+id/dialogSaveCancel"
            android:layout_width="115dp"
            android:layout_height="30dp"
            android:background="@drawable/shape_button"
            android:layout_marginTop="@dimen/margin_extra_large"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:backgroundTint="@color/colorPrimaryLight"
            android:elevation="0dp"
            android:translationZ="3dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/saveDialogInputContainer">
        <View
                android:id="@+id/dialogSaveCancelIcon"
                android:layout_width="@dimen/actionIcon"
                android:layout_height="@dimen/actionIcon"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_medium"
                android:background="@drawable/ic_cancel"/>

        <TextView
                android:id="@+id/dialogSaveCancelText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textAlignment="gravity"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:paddingEnd="@dimen/padding_extra_large"
                android:paddingStart="@dimen/padding_medium"
                android:gravity="center"
                android:text="@string/cancel"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/dialogSaveSubmit"
            android:layout_width="115dp"
            android:layout_height="30dp"
            android:background="@drawable/shape_button"
            android:layout_marginTop="@dimen/margin_extra_large"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:paddingEnd="@dimen/margin_extra_large"
            android:paddingStart="0dp"
            android:backgroundTint="@color/colorPrimaryLight"
            android:elevation="0dp"
            android:translationZ="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/saveDialogInputContainer">
        <View
                android:id="@+id/dialogSaveSubmitIcon"
                android:layout_width="@dimen/actionIcon_small"
                android:layout_height="@dimen/actionIcon_small"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_medium"
                android:background="@drawable/ic_save_score"/>

        <TextView
                android:id="@+id/dialogSaveSubmitText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/margin"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textAlignment="gravity"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:paddingStart="@dimen/padding_medium"
                android:gravity="center"
                android:text="@string/save"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>