<?xml version="1.0" encoding="utf-8"?>
<com.eudycontreras.bowlingcalculator.libraries.morpher.effectViews.morphLayouts.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:backgroundTint="@color/colorPrimary"
        android:tag="createBowler"
        android:layout_gravity="center"
        android:elevation="2dp"
        android:translationZ="10dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:minWidth="260dp"
        android:paddingTop="2dp"
        android:paddingStart="@dimen/padding_large"
        android:paddingEnd="@dimen/padding_large"
        android:paddingBottom="@dimen/padding_large"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:id="@+id/createBowlerDialog"
        tools:context=".activities.MainActivity"
        app:cl_radius="16dp">

    <TextView
            android:id="@+id/createDialogLabel"
            android:text="@string/create_bowler"
            android:textAlignment="gravity"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <com.eudycontreras.bowlingcalculator.libraries.morpher.effectViews.morphLayouts.ViewLayout
            android:translationX="5dp"
            android:tag="emptyStateImage"
            android:id="@+id/windowIcon"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_small"
            android:layout_width="@dimen/actionIcon"
            android:layout_height="@dimen/actionIcon"
            android:background="@drawable/img_ball"
            android:elevation="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/createDialogInputRecycler"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:maxHeight="350dp"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_extra_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createDialogLabel"/>

    <LinearLayout
            android:id="@+id/dialogCreateCancel"
            android:layout_width="115dp"
            android:layout_height="35dp"
            android:background="@drawable/shape_button"
            android:layout_marginTop="@dimen/margin_extra_large"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:backgroundTint="@color/colorPrimaryLight"
            android:elevation="1dp"
            android:translationZ="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createDialogInputRecycler">
        <View
                android:id="@+id/dialogCreateCancelIcon"
                android:layout_width="@dimen/actionIcon"
                android:layout_height="@dimen/actionIcon"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_medium"
                android:background="@drawable/ic_cancel"/>

        <TextView
                android:id="@+id/dialogCreateancelText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textAlignment="gravity"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:paddingEnd="@dimen/padding_extra_large"
                android:paddingStart="@dimen/padding_medium"
                android:gravity="center"
                android:text="@string/cancel"/>
    </LinearLayout>


    <com.eudycontreras.bowlingcalculator.libraries.morpher.effectViews.morphLayouts.FrameLayout
            android:tag="addBowler"
            android:id="@+id/createDialogAddInput"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin"
            android:layout_gravity="end|center"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/shape_circle"
            android:backgroundTint="@color/colorAccent"
            android:elevation="1dp"
            android:translationZ="8dp"
            android:clipToPadding="false"
            app:fl_shapeType="CIRCULAR"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        <com.eudycontreras.bowlingcalculator.libraries.morpher.effectViews.morphLayouts.ViewLayout
                android:tag="addBowlerIcon"
                android:layout_gravity="center"
                android:background="@drawable/ic_add"
                android:backgroundTint="@color/white"
                android:layout_width="24dp"
                android:layout_height="24dp"/>
    </com.eudycontreras.bowlingcalculator.libraries.morpher.effectViews.morphLayouts.FrameLayout>


    <LinearLayout
            android:id="@+id/dialogCreateSubmit"
            android:layout_width="115dp"
            android:layout_height="35dp"
            android:background="@drawable/shape_button"
            android:layout_marginTop="@dimen/margin_extra_large"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:paddingEnd="@dimen/margin_extra_large"
            android:paddingStart="0dp"
            android:backgroundTint="@color/colorPrimaryLight"
            android:elevation="1dp"
            android:translationZ="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createDialogInputRecycler">
        <View
                android:id="@+id/dialogCreateSubmitIcon"
                android:layout_width="@dimen/actionIcon_small"
                android:layout_height="@dimen/actionIcon_small"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_medium"
                android:background="@drawable/ic_save_score"/>

        <TextView
                android:id="@+id/dialogCreateSubmitText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/margin"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textAlignment="gravity"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:paddingStart="@dimen/padding_medium"
                android:gravity="center"
                android:text="@string/save"/>
    </LinearLayout>
</com.eudycontreras.bowlingcalculator.libraries.morpher.effectViews.morphLayouts.ConstraintLayout>